--- a/source/compliant-managed-integration/index.html.slim
+++ b/source/compliant-managed-integration/index.html.slim
@@ -36,7 +36,13 @@ ruby:
   current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/nGfjpkdV4GIIk6ii6wQiE/e3d6a9f1b90f2bdd9e4f9a071f156930/product-cmi-share.jpg'
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   the_form = data.site.forms['328pNB4IvCaQWQMCWmgSCy']
-
+scss:
+  .bg-white-on-small {
+    @media screen and (max-width: 640px) {
+      background-color: hsla(0, 0%, 100%, .8);
+      padding: 1rem;
+    }
+  }
 / = partial "partials/snippets/nav-sub-product"
 
 aside.hide-for-large.section-article.container-color--blue-alt.menu.button-group.align-center
@@ -53,142 +59,27 @@ section.masthead.bg-dark.bg-red-yellow-grad.product-cmi.relative id=current_page
           .media-object-section.media-object--info.main-section.align-self-middle
             h1.headline-3.text-bold.margin-bottom-sm Compliant Managed Integration
             p.lead = current_page.data.summary
-            = partial "partials/snippets/button", :locals => { :label => "Get started", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "compliance", :item_id => "get-ccms-mobile", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
+            = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "compliance", :item_id => "get-ccms-mobile", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
   .art
     = partial "partials/snippets/nav-sub-product"
     = inline_svg("products-cards-color", class: "z-5 art-accent step-1")
     / .art-bg-fill.art-light-blob
     .z-0.art-bg-fill.art-pattern.container-image--center.lozad data-background-image=bg_image
-.strip.strip-small.strip-cmi
-.container-color--gray-light
-  section.section-article id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
-    .row.align-center
-      .columns.small-12.medium-12.large-7.text-center.group
-        = inline_svg("icon-integration", class: "icon-size--xlarge svg-color--gray-4")
-        h1.headline-3.text-light Datica Compliant Managed Integration (CMI) is the complete toolset to handle <strong>compliant, scalable, secure data exchange</strong> with any EHR or clinical system
-    .row.align-middle.group
-      .columns.small-12.large-5
-        .callout.drop
-          h3.headline-4.text-light <strong>Full-Stack</strong> Data Integration
-          p The mature integration stack considers HIPAA compliance, data security, redundant backups, and no reliance on black box proprietary APIs as core ingredients to a successful integration strategy.
-          p Don't get caught with infrastructure gotchas as you go from zero-to-one or if you are preparing to scale to hundreds of integrations. Instead, get Datica CMI.
-          p
-            strong Included in our data integration application:
-          ul
-            li Mirth interface engine
-            li Postgres database
-            li Highly Available and redundant configuration
-            li HITRUST CSF Certified cloud infrastructure
-            li Compliant logging and auditing of activity
-            li REST API endpoints mapped to all major data standards
-            li VPN setup for secure connectivity
-      .columns.small-12.large-7
-        img.lozad alt=("Platform Integration") data-src="/public/img/platform-integration-2x.png" /
+  .strip.strip-small.strip-cmi
 
-    aside.section-article--sm.menu.button-group.align-center.show-for-large
-      = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow", :item_id => "cta_top_pricing" }
-      = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "#cta", :button_classes => "button", :icon => "icon-chevron-down" }
+section.section-article.lozad.container-image--center data-background-image="https://images.ctfassets.net/189dvqdsjh46/4JHMGlqAon75fyTjuaEWyf/acd8e33feb896e46108e95721219cc60/Doctor_with_patients_in_office__crop_.jpg?w=2400"
+  .row.bg-white-on-small
+    .columns.small-12.medium-6.large-4
+      h2.headline-2 Take the stress out of EHR integrations.
+      p.lead We handle the stress, risk and complexity of EHR integrations, so you can help medical teams do what they do best.
+      h3.headline-4 Get back to solving problems for heathcare
+      p In the past, EHR integration projects have been frustrating obstacles for innovation teams, preventing them from creating breakthrough solutions for overwhelmed medical professionals.
+      p Imagine being free to focus on <em>solving</em> problems again, instead of the worry and cost of integrating your solution with your EHR.
+      p Integrating with EHRs is an ongoing challenge for digital health solutions. EHR integration is not just a technology problem, it’s also a people and process problem.
 
-section.section-article.container-gray-11
-  .row.align-middle
-    .columns.small-12.medium-8
-      .video.drop.group
-        <script src="https://fast.wistia.com/embed/medias/0rr2p8xca5.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_0rr2p8xca5 seo=false videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
-    .columns.small-12.medium-4
-      h3.headline-4 What is EHR Integration?
-      p EHR integration is the partnership between providers, payers, vendors, and other players that brings the data or function from one application or program to that of another. Because of the sheer quantity and diversity of data, healthcare providers face major obstacles in integrating and effectively analyzing healthcare information.
-      = partial "partials/snippets/button", :locals => { :label => "Learn more about EHR integration", :url => "/discover/ehr-integrations/", :button_classes => "button hollow", :item_id => "integration" }
-section.section-article.container-color--blue-bright-noise
-  .row.align-center.text-center
-    .columns.small-12.large-10
-      h2.headline-3 Datica's Proven Integration Track Record
-      .row.small-up-1.medium-up-3.align-center
-        .column
-          span.headline-1 200+
-          p Total number of sites with live integrations using CMI.
-        .column
-          span.headline-1 32+
-          p Total number of EHRs Datica has helped integrate successfully with customer products.
-        .column
-          span.headline-1 Millions
-          p Total number of mission-critical messages processed monthly on Datica's platform.
-
-section.section-article
-  .row.align-center
-    .columns.small-12.large-6.text-center.group
-      h3.headline-3 More than just an API
-      p.lead The full suite of integration tooling you need to successfully complete an integration project with a clinical site.
-  .row.row--card-grid.small-up-1.medium-up-2.large-up-4.align-center
-    .column
-      .card
-        .card-section
-          h4.headline-5 Connect to any  EHR or system
-          p You'll never have to think twice about whether your project will be supported.
-    .column
-      .card
-        .card-section
-          h4.headline-5 True scalability
-          p With a toolset on Datica CKS, integrations scale as you scale.
-    .column
-      .card
-        .card-section
-          h4.headline-5 HIPAA compliant infrastructure
-          p Compliance is a requirement for all data exchange. Never worry about it again.
-    .column
-      .card
-        .card-section
-          h4.headline-5 Security baked-in from the start
-          p HL7, FHIR, APIs—security is inherently unavailable. We add a security layer to your integration.
-    .column
-      .card
-        .card-section
-          h4.headline-5 FHIR-proof your app
-          p The future of healthcare data exchange is FHIR. You are ready for the switch when it happens.
-    .column
-      .card
-        .card-section
-          h4.headline-5 24/7 monitoring
-          p Mission critical data has important uptime requirements. Datica monitors the connection for you.
-    .column
-      .card
-        .card-section
-          h4.headline-5 Highly available
-          p The hard work to ensuring cloud-based infrastructure is highly available 24/7 is done for you.
-    .column
-      .card
-        .card-section
-          h4.headline-5 Open source transformations
-          p You own your transformations because we use open source Mirth as the interface engine.
-
-section.section-article.container-gray-5.text-center
-  .row.align-center
-    .columns.small-12.large-10
-      h3.headline-4 One REST API for all your connections
-      img.img-crisp.lozad alt=("One REST API for all your connections") data-src="/public/img/platform-one-api-diagram.png" /
-
-section.section-article.container-gray-12 id=current_page.data.subnav[2].slug data-magellan-target=current_page.data.subnav[2].slug
-  .row.align-center
-    .columns.small-12
-      h2.headline-3.text-center.group
-        | Integration Services
-  .row.align-center.align-middle.group
-    .columns.small-12.medium-6.large-5
-      h3.headline-4 Project Management
-      p Our team of project managers provide an expert view into integrated with EHRs and health systems. They will help manage timelines, create project plans, and track deliverables.
-      h3.headline-4 Connection Setup and Maintenance
-      p Datica’s Integration Engineers will build, configure, test and maintain VPN connections to allow for transmission of HL7 messages.
-      h3.headline-4 Interface Build and Configuration
-      p We will transform HL7 messages into JSON or FHIR messages to help keep things standard for you across implementations. We have many predesigned channels ready to go.
-    .columns.small-12.medium-6.large-5
-      .callout.drop.group
-        blockquote.quote--serif
-          - quote_services = data.site.quotes['4r9Bmb0l8QiMgKqCagOa0E']
-          = Kramdown::Document.new(quote_services["quote_body"]).to_html
-        - if quote_services.has_key?("related_person")
-          = partial("partials/snippets/person", :locals => { :p => quote_services.related_person } )
+section.section-article.bg-gray-3 id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
   .row.align-center
     .columns.small-12.medium-10.large-6.text-center
-      = inline_svg("icon-integration", class: "icon-size--large svg-color--gray-7 group")
       h3.headline-3 Datica Integration Solutions
       p.lead Datica's approach to integration has helped a wide range of solutions across the entire spectrum of healthcare:
   .row.align-center.align-middle.group
@@ -212,10 +103,117 @@ section.section-article.container-gray-12 id=current_page.data.subnav[2].slug da
         li Clinical Documentation Improvement &amp; Physician Query
         li Orthopedic Implant Providers for Supply Chain Optimization &amp; Instrument Tray Reconfiguration
         li Claims Processing and Claim Audit Tracking Solutions
+  .row.align-center
+    .columns.small-12.large-9.text-center
+      h4.headline-6.spaced-out.text-light Use case: Hospital integration
+      / img.lozad alt=("Platform Integration") data-src="/public/img/platform-integration-2x.png" /
+      img.group.lozad alt="Integration - hospital use case" src="https://images.ctfassets.net/189dvqdsjh46/4UZr8wc5XYiFIA8jYSzxaF/ab9f343b28b8d180e103b558d49b6e9b/CMI_example_use_case__hospital_.png?w=1000&fm=png&fl=png8" data-src="https://images.ctfassets.net/189dvqdsjh46/4UZr8wc5XYiFIA8jYSzxaF/ab9f343b28b8d180e103b558d49b6e9b/CMI_example_use_case__hospital_.png"
+
+  aside.section-article--sm.menu.button-group.align-center.show-for-large
+    /= partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow", :item_id => "cta_top_pricing" }
+    = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "#cta", :button_classes => "button button--light", :icon => "icon-chevron-down" }
+
+section.section-article.container-gray-11
+  .row.align-middle
+    .columns.small-12.medium-8
+      .video.drop.group
+        <script src="https://fast.wistia.com/embed/medias/0rr2p8xca5.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_0rr2p8xca5 seo=false videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
+    .columns.small-12.medium-4
+      h3.headline-4 What is EHR Integration?
+      p EHR integration is the partnership between providers, payers, vendors, and other players that brings the data or function from one application or program to that of another. Because of the sheer quantity and diversity of data, healthcare providers face major obstacles in integrating and effectively analyzing healthcare information.
+      = partial "partials/snippets/button", :locals => { :label => "Learn more about EHR integration", :url => "/discover/ehr-integrations/", :button_classes => "button hollow", :item_id => "integration" }
+section.section-article--med.strip.strip-cmi
+  .row.align-center.text-center
+    .columns.small-12.large-10
+      h2.headline-3 Datica's Proven Integration Track Record
+      .row.small-up-1.medium-up-3.align-center
+        .column
+          span.headline-1 200+
+          p Total number of sites with live integrations using CMI.
+        .column
+          span.headline-1 32+
+          p Total number of EHRs Datica has helped integrate successfully with customer products.
+        .column
+          span.headline-1 Millions
+          p Total number of mission-critical messages processed monthly on Datica's platform.
+
+section.section-article.bg-gray-3
+  .row.align-middle.group
+    .columns.small-12.medium-6.large-8
+      .row
+        .columns.small-12.large-8
+          h3.headline-3 More than just an API
+          p.lead The full suite of integration tooling you need to successfully complete an integration project with a clinical site.
+      .row.small-up-1.medium-up-2.large-up-3.align-left.group
+        .column
+          h4.headline-5 Connect to any EHR or system
+          p You'll never have to think twice about whether your project will be supported.
+        .column
+          h4.headline-5 True scalability
+          p With a toolset on Datica CKS, integrations scale as you scale.
+        .column
+          h4.headline-5 HIPAA compliant infrastructure
+          p Compliance is a requirement for all data exchange. Never worry about it again.
+        .column
+          h4.headline-5 Security baked-in from the start
+          p HL7, FHIR, APIs—security is inherently unavailable. We add a security layer to your integration.
+        .column
+          h4.headline-5 FHIR-proof your app
+          p The future of healthcare data exchange is FHIR. You are ready for the switch when it happens.
+        .column
+          h4.headline-5 24/7 monitoring
+          p Mission critical data has important uptime requirements. Datica monitors the connection for you.
+        .column
+          h4.headline-5 Highly available
+          p The hard work to ensuring cloud-based infrastructure is highly available 24/7 is done for you.
+        .column
+          h4.headline-5 Open source transformations
+          p You own your transformations because we use open source Mirth as the interface engine.
+      .row
+        .columns.small-12
+          h3.headline-4 One REST API for all your connections
+          img.img-crisp.lozad alt=("One REST API for all your connections") data-src="/public/img/platform-one-api-diagram.png" /
+
+    .columns.small-12.medium-6.large-4
+      .card.bg-gray-10.pad
+        h3.headline-4.text-light <strong>Full-Stack</strong> Data Integration
+        p The mature integration stack considers HIPAA compliance, data security, redundant backups, and no reliance on black box proprietary APIs as core ingredients to a successful integration strategy.
+        p Don't get caught with infrastructure gotchas as you go from zero-to-one or if you are preparing to scale to hundreds of integrations. Instead, get Datica CMI.
+        p
+          strong Included in our data integration application:
+        ul
+          li Mirth interface engine
+          li Postgres database
+          li Highly Available and redundant configuration
+          li HITRUST CSF Certified cloud infrastructure
+          li Compliant logging and auditing of activity
+          li REST API endpoints mapped to all major data standards
+          li VPN setup for secure connectivity
+
+section.section-article.container-gray-12 id=current_page.data.subnav[2].slug data-magellan-target=current_page.data.subnav[2].slug
+  .row.align-center
+    .columns.small-12
+      h2.headline-3.text-center.group
+        | Integration Services
+  .row.align-center.align-middle.group
+    .columns.small-12.medium-6.large-5
+      h3.headline-4 Project Management
+      p Our team of project managers provide an expert view into integrated with EHRs and health systems. They will help manage timelines, create project plans, and track deliverables.
+      h3.headline-4 Connection Setup and Maintenance
+      p Datica’s Integration Engineers will build, configure, test and maintain VPN connections to allow for transmission of HL7 messages.
+      h3.headline-4 Interface Build and Configuration
+      p We will transform HL7 messages into JSON or FHIR messages to help keep things standard for you across implementations. We have many predesigned channels ready to go.
+    .columns.small-12.medium-6.large-5
+      .callout.drop.group
+        blockquote.quote--serif
+          - quote_services = data.site.quotes['4r9Bmb0l8QiMgKqCagOa0E']
+          = Kramdown::Document.new(quote_services["quote_body"]).to_html
+        - if quote_services.has_key?("related_person")
+          = partial("partials/snippets/person", :locals => { :p => quote_services.related_person } )
 
   .row.align-center
     .columns.text-center
-      = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "#cta", :button_classes => "button hollow", :icon => "icon-chevron-down" }
+      = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button hollow", :icon => "icon-chevron-down" }
 
 = partial("/partials/section-promos/tco-integration-banner", :locals => { :style => "dark", :align => "right", :bgImage => "https://images.ctfassets.net/189dvqdsjh46/1iP2tqSCPKuIY6gIakoWcM/c954e6875e22448528da37b912f8aca4/triangle_theme__darker__Dallas_Ball__-_ash-edmonds-636863-unsplash.jpg" })
 
