--- a/source/assets/scss/modules/containers.scss
+++ b/source/assets/scss/modules/containers.scss
@@ -444,6 +444,9 @@
     background: linear-gradient(58.65deg, rgba(212, 72, 131, 0.81) -2.22%, rgba(217, 72, 155, 0.19) 14.52%, rgba(218, 72, 159, 0) 27.72%, rgba(136, 32, 101, 0) 86.95%, rgba(185, 41, 102, 0.81) 103.16%), linear-gradient(111.54deg, rgba(255, 204, 105, 0.63) -6.07%, rgba(168, 116, 54, 0) 24.26%), linear-gradient(187.45deg, #1D1B1B -6.22%, #62605D 101.05%);
     // background: linear-gradient(58.65deg, rgba(212, 72, 131, 0.81) -2.22%, rgba(217, 72, 155, 0.19) 14.52%, rgba(218, 72, 159, 0) 27.72%, rgba(136, 32, 101, 0) 86.95%, rgba(185, 41, 102, 0.81) 103.16%), linear-gradient(111.54deg, rgba(255, 204, 105, 0.63) -6.07%, rgba(168, 116, 54, 0) 24.26%), linear-gradient(189.79deg, #312F2F -0.87%, #62605D 87.34%);
 }
+.bg-blue-purple-grad {// grad-blue-cks */
+    background: linear-gradient(94.97deg, rgba(135, 61, 255, 0.36) -3.1%, rgba(135, 61, 255, 0) 17.94%), linear-gradient(44deg, rgba(23, 73, 249, 0.75) -4.91%, rgba(23, 73, 249, 0) 29.21%, rgba(23, 73, 249, 0) 89.52%, rgba(23, 73, 249, 0.72) 105.36%), linear-gradient(186.59deg, #2C2A2A -2.38%, #62605D 95.07%);
+}
 // these are the same as strip, just diff angle /shrug
 .blob-cks {
     @include gradient-cks(to left top);
