--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -402,7 +402,7 @@
 //     margin-left:  auto;
 // }
 .nomargin, .no-margin {
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
 }
 .no-margin-top{
   margin-top: 0;
